# TrueClean

./: .gitignore  .prettierignore  A4-workspace  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  clippy.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  trueclean_agent_system_prompt.md  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ACCEPTANCE_CHECKLIST.md  AGENT_TASKS.md  ARCHITECTURE.md  CI_CD.md  CONTRACT.md  PITCH.md  PRD.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md
proposal/: PROMPT.md  trueclean-proposal.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  TrueClean.entitlements  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: [email protected]  icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  model.rs  permissions.rs  secrets.rs  state.rs
src-tauri/src/agent/: context.rs  mod.rs  prompt.rs  runner.rs  tools.rs
src-tauri/src/agent/providers/: claude.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs  traits.rs
src-tauri/src/cleaning/: duplicates.rs  junk.rs  large_old.rs  mod.rs  paths.rs  safety.rs  startup.rs  trash.rs  uninstaller.rs
src-tauri/src/commands/: agent.rs  cleanup.rs  mod.rs  permissions.rs  scan.rs  settings.rs  system.rs
src-tauri/src/scanner/: categories.rs  engine.rs  mod.rs  tree.rs  walker.rs
src/assets/branding/: MANIFEST.md  brand-guide.md  generate_icons.py
src/components/agent/: AgentPanel.tsx  Composer.tsx  ConfirmDialog.tsx  MessageList.tsx  ToolCallCard.tsx  agent.css
src/components/cleanup/: DuplicatesPanel.tsx  JunkPanel.tsx  LargeOldFiles.tsx  StartupItems.tsx  UninstallerPanel.tsx  cleanup.css
src/components/layout/: BottomBar.tsx  ConfirmModal.tsx  Onboarding.tsx  Overview.tsx  PermissionGate.tsx  PermissionGuide.tsx  Sidebar.tsx  TopBar.tsx  layout.css
src/components/scan/: BubbleMap.tsx  CategoryBar.tsx  FileTree.tsx  ScanProgress.tsx  ScanView.tsx  Sunburst.tsx  Treemap.tsx  scan.css
src/components/settings/: SettingsPanel.tsx  settings.css
src/components/ui/: Button.tsx  EmptyState.tsx  ErrorBoundary.tsx  IconButton.tsx  ProgressRing.tsx  Segmented.tsx  SurfaceCard.tsx  Toast.tsx  feedback.css  toastStore.ts  ui.css
src/hooks/: useAgent.ts  usePermissions.test.ts  usePermissions.ts  useScan.ts  useTheme.ts
src/i18n/: index.ts  localeStore.ts
src/lib/: format.test.ts  format.ts  ipc.ts  lens-utils.test.ts  lens-utils.ts  types.ts
src/store/: agentStore.ts  cleanStore.test.ts  cleanStore.ts  scanStore.test.ts  scanStore.ts  settingsStore.ts
src/styles/: global.css  tokens.css
tests/e2e/: smoke.mjs
(+22 files in other folders)
