[package]
name = "trueclean"
version = "0.1.0"
description = "TrueClean — cross-platform disk cleaner with an AI agent"
authors = ["TrueClean"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "trueclean_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Filesystem scanning
jwalk = "0.8"
walkdir = "2"
rayon = "1"
blake3 = "1"

# System info / paths / safe delete
sysinfo = "0.32"
dirs = "5"
trash = "5"

# Agent / networking (streaming)
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"

# Misc
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
